# car_plate_with_opencv

./: .gitignore  pyproject.toml
app/: main.py  main_2.py  main_3.py  main_4.py
